kubernetes/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 15
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        application: front
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
              selector:
                matchExpressions:
                  - key: application
                    operator: In
                    values:
                      - front
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-013-59/sausage-store/sausage-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend
              containerPort: 8080
          volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/sausagestore.conf
            subPath: sausagestore.conf
      volumes:
      - name: nginx-config
        configMap:
          name: sausagestore-configmap
      imagePullSecrets:
        - name: docker-config-secret
